added the sort by propId